--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ title: Field Notes
 email: webmaster@garenkessel.com
 description: >- # this means to ignore newlines until "baseurl:"
  Blog for all things Garen.
-baseurl: # the subpath of your site, e.g. /blog
+baseurl: "/" # the subpath of your site, e.g. /blog
 url: "https://garenkessel.com" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: gkessel
 github_username:  gkessel
@@ -32,6 +32,7 @@ github_username:  gkessel
 remote_theme: "dracula/gh-pages"
 plugins:
   - jekyll-feed
+  - jekyll-remote-theme
 
 # Exclude from processing.
 # The following items will not be processed, by default.
