--- a/_config.yml
+++ b/_config.yml
@@ -19,22 +19,39 @@
 # in the templates via {{ site.myvariable }}.
 
 title: Field Notes
-email: webmaster@garenkessel.com
 description: >- # this means to ignore newlines until "baseurl:"
- Blog for all things Garen.
-baseurl: "/" # the subpath of your site, e.g. /blog
+  Blog for all things Garen. 
+baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://garenkessel.com" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: gkessel
-github_username:  gkessel
-
-minima:
-  skin: dark
-  date_format: "%b %-d, %Y"
+author:
+  name: Garen Kessel
+  email: "webmaster@garenkessel.com"
 
 # Build settings
-theme: minima
+
 plugins:
   - jekyll-feed
+  - jekyll-remote-theme
+  - jekyll-archives
+remote_theme: jekyll/minima
+minima:
+  skin: dark
+  social_links:
+    twitter: gkessel
+    github: gkessel
+
+show_excerpts: true
+
+#jekyll-archives:
+#  enabled: all
+#  layout: 'archive'
+#  permalinks:
+#    year: '/:year/'
+#    month: '/:year/:month/'
+#    day: '/:year/:month/:day/'
+#    tag: '/tag/:name/'
+#    category: '/category/:name/'
+
 
 # Exclude from processing.
 # The following items will not be processed, by default.
@@ -55,3 +72,4 @@ plugins:
 #   - vendor/cache/
 #   - vendor/gems/
 #   - vendor/ruby/
+
