--- a/_config.yml
+++ b/_config.yml
@@ -32,7 +32,7 @@ author:
 plugins:
   - jekyll-feed
   - jekyll-remote-theme
-  - jekyll-archives
+ # - jekyll-archives
   - jekyll-paginate
 remote_theme: jekyll/minima
 minima:
